force-app/main/default/objects/Coaching_Event__c/fields/Client_Coaching_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Coaching_Key__c</fullName>
    <externalId>true</externalId>
    <label>Client Coaching Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>