force-app/main/default/objects/Coaching_Event__c/fields/Coaching_Template__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Coaching Template</label>
    <referenceTo>Coaching_Template__c</referenceTo>
    <relationshipName>ZetaMRCoachEvents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>