force-app/main/default/objects/Coaching_Event__c/fields/Responses_JSON__c.field-meta.xml
<CustomField>
    <fullName>Responses_JSON__c</fullName>
    <label>Responses JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>