force-app/main/default/objects/Coaching_Event__c/fields/Score_Change__c.field-meta.xml
<CustomField>
    <fullName>Score_Change__c</fullName>
    <description>Manager total score change versus the rep&apos;s prior closed coaching event.</description>
    <formula>Manager_Total_Score__c - Previous_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Change vs Prior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>