force-app/main/default/objects/Coaching_Event__c/fields/Section_Scores_JSON__c.field-meta.xml
<CustomField>
    <fullName>Section_Scores_JSON__c</fullName>
    <label>Section Scores JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>