force-app/main/default/objects/Coaching_Event__c/fields/Self_Evaluation_Requested__c.field-meta.xml
<CustomField>
    <fullName>Self_Evaluation_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Evaluation Requested</label>
    <type>Checkbox</type>
</CustomField>