force-app/main/default/objects/Coaching_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Coaching_Template__c</columns>
    <columns>Employee__c</columns>
    <columns>Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Event_Start__c</columns>
    <columns>Manager_Total_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Coaching Events</label>
</ListView>